redis-cluster.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: external-redis
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-cluster
  namespace: external-redis
spec:
  serviceName: redis-cluster
  replicas: 6
  selector:
    matchLabels:
      app: redis-cluster
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      labels:
        app: redis-cluster
    spec:
      containers:
        - name: redis
          image: redis
          ports:
            - containerPort: 6379
              name: tcp-redis
            - containerPort: 16379
              name: tcp-gossip
          command: ["/conf/update-node.sh", "redis-server", "/conf/redis.conf", "--cluster-announce-ip $(POD_IP)"]
          volumeMounts:
            - name: conf
              mountPath: /conf
              readOnly: false
      volumes:
        - name: conf
          configMap:
            name: redis-cluster
            defaultMode: 0755
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: external-redis
spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
      name: tcp-redis
  selector:
    app: redis-cluster
